# MiniGauge56

./: .gitignore  CMakeLists.txt  README.md  eezMG56.eez-project  eezMG56.eez-project-ui-state  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ui/: CMakeLists.txt
components/ui/src/: screens.c  screens.h
main/: idf_component.yml  main.cpp
